[Update] index.HTML

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>Carol Joana Mendoza Franco</p>    
     <p>Ingenieria en tecnologías de la información</p>
     <p>3°C</p>
+    <p>APLICACIONES WEB</p>
+    <p>Diego Valentin</p>
 </body>
 </html>
