[Update] index.HTML main

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Carol Joana Mendoza Franco</p>    
     <p>Ingenieria en tecnologías de la información</p>
     <p>3°C</p>
+    <p>Cambio en main</p>
 </body>
 </html>
